--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,26 +1,27 @@
 steps:
 # 1. Build the container image
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/cloudrun-go-api:$COMMIT_SHA', '.']
-  # Note: The Dockerfile in your provided code already handles the multi-stage build
+  # Change $COMMIT_SHA to $BUILD_ID
+  args: ['build', '-t', 'gcr.io/$PROJECT_ID/cloudrun-go-api:$BUILD_ID', '.']
 
 # 2. Push the container image to Container Registry
 - name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/$PROJECT_ID/cloudrun-go-api:$COMMIT_SHA']
+  # Change $COMMIT_SHA to $BUILD_ID
+  args: ['push', 'gcr.io/$PROJECT_ID/cloudrun-go-api:$BUILD_ID']
 
 # 3. Deploy the container image to Cloud Run
 - name: 'gcr.io/cloud-builders/gcloud'
   args: [
       'run',
       'deploy',
-      'cloudrun-go-api', # Service name
-      '--image', 'gcr.io/$PROJECT_ID/cloudrun-go-api:$COMMIT_SHA',
+      'cloudrun-go-api',
+      # Change $COMMIT_SHA to $BUILD_ID
+      '--image', 'gcr.io/$PROJECT_ID/cloudrun-go-api:$BUILD_ID',
       '--platform', 'managed',
-      '--region', '${_REGION}', # Use a substitution variable for region
-      '--allow-unauthenticated', # Adjust as needed for public or private access
-      # **Cloud SQL Connection Configuration**
+      # ... (rest of the args)
+      '--region', '${_REGION}',
+      '--allow-unauthenticated',
       '--add-cloudsql-instances', '${_INSTANCE_CONNECTION_NAME}',
-      # **Environment Variables**
       '--set-env-vars', 'DB_USER=${_DB_USER},DB_PASS=${_DB_PASS},DB_NAME=${_DB_NAME}'
   ]
 timeout: '1600s'
