--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -22,7 +22,7 @@ steps:
       '--region', '${_REGION}',
       '--allow-unauthenticated',
       '--add-cloudsql-instances', '${_INSTANCE_CONNECTION_NAME}',
-      '--set-env-vars', 'DB_USER=${_DB_USER},DB_PASS=${_DB_PASS},DB_NAME=${_DB_NAME},PORT=8080'
+      '--set-env-vars', 'DB_USER=${_DB_USER},DB_PASS=${_DB_PASS},DB_NAME=${_DB_NAME}'
   ]
 timeout: '1600s'
 
