--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -22,7 +22,8 @@ steps:
       '--region', '${_REGION}',
       '--allow-unauthenticated',
       '--add-cloudsql-instances', '${_INSTANCE_CONNECTION_NAME}',
-      '--set-env-vars', 'DB_USER=${_DB_USER},DB_PASS=${_DB_PASS},DB_NAME=${_DB_NAME}'
+      '--set-env-vars', 'DB_USER=${_DB_USER},DB_PASS=${_DB_PASS},DB_NAME=${_DB_NAME}',
+       '--port', '8080' # <--- ADD THIS LINE
   ]
 timeout: '1600s'
 
